--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,14 @@ nav {
 
 p { 
   color: white; 
+  font-family: Arial;
 }
 
 .paragraphs {
   margin-left: 50px;
   margin-right: 50px;
 }
+
 .spaceabove {
   margin-top: 50px;
 }
