--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,8 @@ p {
 }
 
 .paragraphs {
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 .spaceabove {
