--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ nav {
   padding-left: 10px;
   padding-right: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 10px;
 }
