--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 nav {
   width: 100%;
-  background-color: white;
+  background-color: grey;
   padding-left: 10px;
   padding-right: 10px;
   display: flex;
@@ -25,7 +25,7 @@ nav {
 }
 
 .nav-links {
-  background-color: white;
+  background-color: grey;
   list-style: none;
   display: flex;
 }
