--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ nav {
   padding-left: 10px;
   padding-right: 10px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 10px;
 }
@@ -84,4 +84,3 @@ p {
     height: 400px;
   }
 }
-
