--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ nav {
   display: inline-block;
 }
 
+.logo:hover {
+  background-color: black;
+}
+
 .nav-links {
   background-color: #dcdcdc;
   list-style: none;
