--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,14 @@ p {
     width: 400px;
     height: 500px;
   }
-  
   .nav-links {
     flex-wrap: wrap;
+  }
+  .title {
+    font-size: 100px;
+  }
+  .name {
+    font-size: 40px;
   }
 }
 @media screen and (max-width: 400px) {
@@ -83,4 +88,11 @@ p {
     width: 300px;
     height: 400px;
   }
+  .title {
+    font-size: 70px;
+  }
+  .name {
+    font-size: 25px;
+  }
 }
+
