--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,10 @@ p {
     height: 400px;
   }
   .title {
-    font-size: 2.1875em;
+    font-size: 50%;
   }
   .name {
-    font-size: 0.8125em;
+    font-size: 50%;
   }
 }
 
