--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,18 @@ p {
 .spaceabove {
   margin-top: 40px;
 }
+.title {
+  font-family: Arial; 
+  font-weight: bold; 
+  font-size: 130px; 
+  margin-left: 30px;
+}
+
+.name {
+  font-family: Arial; 
+  font-size: 70px; 
+  margin-left: 30px;
+}
 @media screen and (max-width: 800px) {
   .embed {
     width: 400px;
