--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ nav {
 
 .nav-item a {
   display: inline-block;
-  
+  padding: 10px 5px 10px 5px;
   text-decoration: none;
   color: black;
   font-family: arial; 
