--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,11 @@ nav {
 
 .nav-item a {
   display: inline-block;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 9px 10px 9px;
   text-decoration: none;
   color: black;
-  font-family: arial; 
+  font-family: arial;
+  font-size: 12px;
 }
 
 .nav-item:hover {
